Add assigment group selector. Configure dev prod env

--- a/SnowReports/ClientApp/src/App.module.css
+++ b/SnowReports/ClientApp/src/App.module.css
@@ -1,7 +1,7 @@
 body
 {
-  color:white;
-  color:#A239CA;
+  //color:wh1ite;
+  //color:1#A239CA;
   background:#0E0B16;
   font-size: 14px;
   margin: 0;
