--- a/SnowReports/ClientApp/src/components/ReportFilters/CheckBoxList/CheckboxesList.module.css
+++ b/SnowReports/ClientApp/src/components/ReportFilters/CheckBoxList/CheckboxesList.module.css
@@ -1,4 +1,4 @@
-.TicketStatesList, .noselect {
+.CheckboxesList, .noselect {
     -webkit-touch-callout: none; /* iOS Safari */
     -webkit-user-select: none; /* Safari */
     -khtml-user-select: none; /* Konqueror HTML */
@@ -6,13 +6,19 @@
     -ms-user-select: none; /* Internet Explorer/Edge */
     user-select: none; /* Non-prefixed version, currently
                                   supported by Chrome, Edge, Opera and Firefox */
+    list-style-type: none;
 }
 
-.TicketStatesList li{
+.CheckboxesList li{
     margin-right: 10px;
 }
 
-.TicketStatesList li label
+.CheckboxesList li label
 {
     color: white;
+}
+
+.CombineSwitcher
+{
+    color: papayawhip;
 }
