--- a/SnowReports/ClientApp/src/App.css
+++ b/SnowReports/ClientApp/src/App.css
@@ -1,15 +1,22 @@
 body
 {
-  //color:wh1ite;
-  //color:1#A239CA;
   background:#0E0B16;
   font-size: 14px;
-  margin: 0;
-  padding: 1rem;
 }
 
+*{
+  padding: 0px;
+  margin: 0px;
+}
 
-
-
+.container{
+  display: flex;
+  flex-wrap: nowrap;
+  margin: 0 auto!important;
+  /*width: 1400px;*/
+  justify-content: center;
+  max-width: 2000px!important;
+  height: 100%;
+}
 
 
