--- a/SnowReports/ClientApp/src/components/Report/TicketsNumberReport.module.css
+++ b/SnowReports/ClientApp/src/components/Report/TicketsNumberReport.module.css
@@ -1,14 +1,18 @@
-Report a{
-    background-color: #A239CA;
-    color: white !important;
+#RightBlock
+{
+    order:5;
+    height: 100%;
+    width: 100%;
+    flex-grow:1;
+    /*background-color: burlywood;*/
 }
 
-Report
+#LeftBlock
 {
-    color:white;
-    color:#A239CA;
-    background:#0E0B16;
-    font-size: 14px;
-    margin: 0;
-    padding: 1rem;
+    order:1;
+    flex-grow:2;
+    padding: 5px;
+    width: 100%;
+    max-width: 250px;
+   /* background-color: #A239CA;*/
 }
