Refactor filter components

--- a/SnowReports/ClientApp/src/components/NavMenu.css
+++ b/SnowReports/ClientApp/src/components/NavMenu.css
@@ -16,3 +16,13 @@ html {
 .box-shadow {
   box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
 }
+
+.nav-item:hover
+{
+  background: red;
+}
+
+.selected
+{
+  border: 2px solid blue;
+}
